# proxi

./: Makefile  Proxi.spec  README.md  main.py  main.spec  pyproject.toml
proxi/: main.py
proxi/cli/: ascii_art.py  context.py  main.py  version.py
proxi/cli/commands/: __init__.py  proxy_profiles.py  proxy_switch.py
proxi/cli/utils/: errors.py
proxi/core/: proxy.py
proxi/core/clients/: kde.py
proxi/core/models/: config.py  proxy.py
proxi/core/proxy_config_clients/: __init__.py  _base.py  _gnome.py  _gsettings.py  _kde.py  _shell.py
proxi/core/proxy_managers/: __init__.py  _base.py  _gnome.py  _kde.py  base.py  gnome.py  kde.py
proxi/core/services/: proxy_profiles.py
proxi/core/utils/: errors.py  platform.py  shell_profile.py  url_parsing.py
proxi/ui/: executable_path.py  main.py  switch_widget.py
proxi/ui/widgets/: add_profile_dialog.py  drawing_decoration.py  profile_form_dialog.py  proxy_profile.py  proxy_profile_list.py  status_switch.py  switch.py
proxi/ui/widgets/ui_kit/: button.py  scroll_area.py  switch.py
tests/: test_url_parsing.py
