[project]
name = "proxi"
version = "0.1.0"
description = "Proxy preferences manager"
readme = "README.md"
license = "MIT"
repository = "https://github.com/one-with-violets-in-her-lap/proxi"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
ui = [
    "pyside6>=6.9.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.5",
]
